# employees-rest/src/main/java/employees/EmployeesResource.java
@@ -1,9 +1,13 @@
 package employees;
 
 import io.quarkus.logging.Log;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.core.Response;
 import training.api.EmployeesApi;
 import training.dto.EmployeeDto;
 
+import java.net.URI;
 import java.util.List;
 import java.util.Optional;
 
@@ -25,4 +29,10 @@ public class EmployeesResource implements EmployeesApi {
         Log.infof("Parameters: %s, %s", namePrefix, requestId);
         return employeesService.getEmployees(Optional.ofNullable(namePrefix));
     }
+
+    @Override
+    public EmployeeDto createEmployee(EmployeeDto employeeDto) {
+        return employeesService.create(employeeDto);
+    }
+
 }
